--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -15,11 +15,11 @@
 # this must always be the first section:
 [Babelfish for T-SQL]
 # only Babelfish version numbers listed here can be referenced the rules below:
-valid_versions=1.0.0, 1.1.0, 1.2.0, 1.2.1, 1.2.2, 1.3.0, 1.3.1, 1.4.0, 2.1.0, 2.1.1, 2.2.0
-# x.y.1 is a bugfix release for x.y.0 (no new T-SQL features supported)
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 2.1.0, 2.2.0
+# x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported)
 # 1.4.x, 1.3.x are based on a newer PG release than 1.2.x (supports no new T-SQL features)
 file_format=1                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Oct-2022                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Nov-2022                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy
 
 # Basic principle: 
@@ -179,7 +179,7 @@ complexity_score=HIGH
 
 [JSON features]
 rule=for_clause
-list=SELECT FOR JSON AUTO,SELECT FOR JSON PATH
+list=SELECT FOR JSON AUTO,SELECT FOR JSON AUTO ROOT,SELECT FOR JSON AUTO INCLUDE_NULL_VALUES,SELECT FOR JSON AUTO WITHOUT_ARRAY_WRAPPER,SELECT FOR JSON PATH,SELECT FOR JSON PATH ROOT,SELECT FOR JSON PATH INCLUDE_NULL_VALUES,SELECT FOR JSON PATH WITHOUT_ARRAY_WRAPPER
 report_group=JSON
 complexity_score=HIGH
 
@@ -228,7 +228,6 @@ report_group-JSON=OPENJSON,ISJSON,JSON,JSON_MODIFY,JSON_QUERY,JSON_VALUE
 complexity_score-LOW=STR,ATAN2,DATABASE_PRINCIPAL_ID,APP_NAME,HOST_ID
 complexity_score-HIGH=ENCRYPTBYASYMKEY,ENCRYPTBYCERT,ENCRYPTBYKEY,ENCRYPTBYPASSPHRASE,PWDCOMPARE,PWDENCRYPT,DECRYPTBYASYMKEY,DECRYPTBYCERT,DECRYPTBYKEY,DECRYPTBYKEYAUTOASYMKEY,DECRYPTBYKEYAUTOCERT,DECRYPTBYPASSPHRASE,DECRYPTBYKEYAUTOCERT,CERT_ID,KEY_GUID,KEY_ID,KEY_NAME,ASYMKEYPROPERTY,CERTPROPERTY,CRYPT_GEN_RANDOM,SIGNBYASYMKEY,SIGNBYCERT,SYMKEYPROPERTY,VERIFYSIGNEDBYCERT,VERIFYSIGNEDBYASYMKEY,CONTAINS,CONTAINSTABLE,FREETEXT,FREETEXTTABLE,SEMANTICKEYPHRASETABLE,SEMANTICSIMILARITYDETAILSTABLE,SEMANTICSIMILARITYTABLE,FULLTEXTCATALOGPROPERTY,FULLTEXTSERVICEPROPERTY,FILETABLEROOTPATH,GETFILENAMESPACEPATH,GETPATHLOCATOR,PATHNAME
 
-
 [HASHBYTES]
 rule=function_call
 supported-1.0.0=arg1=MD5,SHA1,SHA2_256,SHA2_512
@@ -257,7 +256,7 @@ complexity_score=LOW
 
 [DATEADD]
 rule=function_call
-supported-1.0.0=arg1=D,DAY,DAYOFYEAR,DD,DY,HH,HOUR,M,MCS,MINUTE,MM,MONTH,N,NS,Q,QQ,QUARTER,S,SECOND,SS,WEEK,WEEKDAY,WK,WW,Y,YEAR,YY,YYYY
+supported-1.0.0=arg1=D,DAY,DAYOFYEAR,DD,DY,HH,HOUR,M,MCS,MICROSECOND,MINUTE,MM,MONTH,N,NS,Q,QQ,QUARTER,S,SECOND,SS,WEEK,WEEKDAY,WK,WW,Y,YEAR,YY,YYYY
 supported-2.2.0=arg1=MILLISECOND,MS,W
 report_group=Built-in functions
 complexity_score=LOW
@@ -413,6 +412,12 @@ report_group=DDL
 [Features in computed columns]
 rule=column_definition
 list=SCALAR_UDF_CALL,XML_METHOD_CALL,HIERARCHYID_METHOD_CALL,RAND,GETDATE,GETUTCDATE,CURRENT_TIMESTAMP,STRING_CONCAT_PLUS,CONCAT,CAST(DATETIME),CONVERT(DATETIME)
+report_group=DDL
+
+[Scalar UDF in table DDL]
+rule=table_constraint,column_constraint
+list=CREATE TABLE DEFAULT, ALTER TABLE DEFAULT, CREATE TABLE CHECK, ALTER TABLE CHECK
+supported-1.0.0=CREATE TABLE DEFAULT, CREATE TABLE CHECK, ALTER TABLE CHECK
 report_group=DDL
 
 [Global Temporary Tables]
@@ -795,7 +800,7 @@ report_group=Control flow
 [CHECKPOINT]
 rule=checkpoint_statement
 report_group=Transactions
-default_classification=ReviewSemantics    
+default_classification=ReviewSemantics   
 complexity_score=LOW
     
 [NEXT VALUE FOR]
@@ -871,7 +876,7 @@ list=sysallocunits,sysaltfiles,sysasymkeys,sysaudacts,sysbinobjs,sysbinsubobjs,s
 supported-1.0.0=databases,sysdatabases,server_principals,objects,sysobjects,all_objects,schemas,tables,indexes,views,all_views,procedures,extended_properties,columns,all_columns,syscharsets,assemblies,assembly_types,sysforeignkeys,foreign_key_columns,foreign_keys,key_constraints
 supported-1.1.0=sysindexes,syscolumns,system_objects,identity_columns,types,check_constraints,computed_columns,default_constraints,index_columns,sql_modules
 supported-1.2.0=dm_os_host_info,dm_exec_sessions,dm_exec_connections,endpoints,table_types,database_principals,sysconfigures,syscurconfigs,configurations,sysprocesses
-supported-2.1.0=syslanguages,database_files,sql_modules,system_sql_modules,all_sql_modules,xml_schema_collections,dm_hadr_database_replica_states,data_spaces,database_mirroring,indexes,all_views,database_role_members
+supported-2.1.0=syslanguages,database_files,system_sql_modules,all_sql_modules,xml_schema_collections,dm_hadr_database_replica_states,data_spaces,database_mirroring,indexes,all_views,database_role_members
 supported-2.2.0=numbered_procedures,triggers,spatial_index_tessellations,plan_guides,synonyms,events,trigger_events,fulltext_indexes,dm_hadr_cluster,xml_indexes,change_tracking_tables,key_constraints,database_filestream_options,filetable_system_defined_objects,hash_indexes,filegroups,master_files,assembly_modules,change_tracking_databases,database_recovery_status,fulltext_catalogs,fulltext_stoplists,fulltext_indexes,fulltext_index_columns,fulltext_languages,selective_xml_index_paths,spatial_indexes,filetables,registered_search_property_lists,syspolicy_configuration,syspolicy_system_health_state
 
 [INFORMATION_SCHEMA]
@@ -1331,5 +1336,5 @@ report_group=Syntax Issues
 rule=execute_body
 
 #-----------------------------------------------------------------------------------
-#file checksum=13da8ec9
+#file checksum=4ea69373
 #--- end ---------------------------------------------------------------------------
