additional small fixes

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -314,6 +314,7 @@ report_group=Numeric representation of datetime
 [Column attribute]
 rule=special_column_option
 list=ROWGUIDCOL,SPARSE,FILESTREAM,MASKED
+default_classification-Ignored=ROWGUIDCOL,SPARSE,FILESTREAM
 report_group=DDL
 complexity_score=LOW
 
@@ -1334,7 +1335,8 @@ report_group=Syntax Issues
 [Dynamic SQL]
 # included only so that user can define overrides
 rule=execute_body
+default_classification=ReviewManually
 
 #-----------------------------------------------------------------------------------
-#file checksum=4ea69373
+#file checksum=a39265a1
 #--- end ---------------------------------------------------------------------------
