--- a/BabelfishCompassUser.Optimistic.cfg
+++ b/BabelfishCompassUser.Optimistic.cfg
@@ -3,9 +3,10 @@
 #
 # What is this file?
 # ------------------
-# This file is a pre-prepared version of the generic user-defined .cfg file
-# for Babelfish. See the header of BabelfishCompassUser.cfg for details about 
-# the file contents and the required formatting conventions.
+# This file is a predefined version of the generic user-defined .cfg file
+# for Babelfish. See the header of BabelfishCompassUser.cfg, and the 
+# Babelfish User Guide, for details about usage, file contents and 
+# required formatting conventions.
 #
 # Why 'optimistic'?
 # -----------------
