additional support for v.2.4.0/3.1.0

--- a/BabelfishCompassUser.Optimistic.cfg
+++ b/BabelfishCompassUser.Optimistic.cfg
@@ -752,3 +752,12 @@ default_classification=Ignored
 
 
 [STRING_SPLIT with N arguments]
+
+
+[TRIM]
+
+
+[NEXT VALUE FOR context]
+
+
+[Dynamically created cursor]
