--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -228,6 +228,7 @@ supported-2.1.0=OPENJSON,HAS_PERMS_BY_NAME,IS_MEMBER,IS_ROLEMEMBER
 supported-2.2.0=HOST_NAME,SYSTEM_USER,SID_BINARY
 supported-2.3.0=DATETIMEOFFSETFROMPARTS,TRY_CONVERT,FORMAT,JSON_MODIFY
 supported-2.4.0=ATN2,APP_NAME,STR,SESSION_CONTEXT,DATEDIFF_BIG,OBJECT_DEFINITION,OBJECT_SCHEMA_NAME
+supported-3.1.0=OPENQUERY
 default_classification-ReviewSemantics=NEWSEQUENTIALID
 report_group-Filestream=FILETABLEROOTPATH,GETFILENAMESPACEPATH,GETPATHLOCATOR,PATHNAME
 report_group-Fulltext Search=CONTAINS,CONTAINSTABLE,FREETEXT,FREETEXTTABLE,SEMANTICKEYPHRASETABLE,SEMANTICSIMILARITYDETAILSTABLE,SEMANTICSIMILARITYTABLE,FULLTEXTCATALOGPROPERTY,FULLTEXTSERVICEPROPERTY
@@ -319,6 +320,11 @@ report_group=Built-in functions
 rule=function_call
 supported-1.0.0=1
 supported-1.2.0=0
+report_group=Built-in functions
+
+[TRIM]
+rule=function_call
+list=LEADING,TRAILING,BOTH
 report_group=Built-in functions
 
 [STRING_SPLIT with N arguments]
@@ -847,6 +853,12 @@ rule=function_call
 supported-2.4.0=*
 report_group=Built-in functions
 complexity_score=LOW
+
+[NEXT VALUE FOR context]
+rule=function_call
+list=DECLARE @v,SET @v,IF,WHILE,OVER()
+report_group=Built-in functions
+complexity_score=LOW
     
 [Cursor options]
 rule=cursor_statement
@@ -866,6 +878,10 @@ report_group=Cursors
 rule=fetch_cursor
 list=NEXT,PRIOR,FIRST,LAST,ABSOLUTE,RELATIVE
 supported-1.0.0=NEXT
+report_group=Cursors
+
+[Dynamically created cursor]
+rule=cursor_statement
 report_group=Cursors
 
 [DBA statements]
@@ -945,7 +961,7 @@ supported-2.1.0=xp_instance_regread,sp_sproc_columns,sp_sproc_columns_100,sp_hel
 supported-2.2.0=sp_helpsrvrolemember
 supported-2.3.0=sp_helpdbfixedrole,sp_addrole,sp_droprole,sp_addrolemember,sp_droprolemember
 supported-2.4.0=sp_set_session_context,sp_rename 
-supported-3.1.0=sp_linkedservers,sp_helplinkedsrvlogin
+supported-3.1.0=sp_linkedservers,sp_addlinkedserver,sp_dropserver,sp_addlinkedsrvlogin,sp_helplinkedsrvlogin,sp_droplinkedsrvlogin
 default_classification-ReviewManually=sp_db_vardecimal_storage_format,sp_fulltext_database
 report_group-XML=sp_xml_preparedocument,sp_xml_removedocument,sp_xml_schema_rowset,sp_xml_schema_rowset2
 report_group-Distributed Transactions(XA)=sp_sqljdbc_xa_install,sp_sqljdbc_xa_uninstall,sp_sqljdbc_xa_internal_remove,sp_xa_commit,sp_xa_end,sp_xa_forget,sp_xa_forget_ex,sp_xa_init,sp_xa_init_ex,sp_xa_prepare,sp_xa_prepare_ex,sp_xa_recover,sp_xa_rollback,sp_xa_rollback_ex,sp_xa_start,xp_sqljdbc_xa_commit,xp_sqljdbc_xa_end,xp_sqljdbc_xa_forget,xp_sqljdbc_xa_forget_ex,xp_sqljdbc_xa_init,xp_sqljdbc_xa_init_ex,xp_sqljdbc_xa_prepare,xp_sqljdbc_xa_prepare_ex,xp_sqljdbc_xa_recover,xp_sqljdbc_xa_rollback,xp_sqljdbc_xa_rollback_ex,xp_sqljdbc_xa_start
@@ -1213,6 +1229,7 @@ rule=set_special
 supported-1.0.0=*
 
 [SET FMTONLY]
+# applies only to SELECT * in 2.1.0+
 rule=set_special
 default_classification=ReviewManually
 
@@ -1296,6 +1313,7 @@ rule=set_special
 rule=create_login,alter_login
 list=SID,DEFAULT_DATABASE,DEFAULT_LANGUAGE,CHECK_EXPIRATION,CHECK_POLICY,CREDENTIAL,PASSWORD,PASSWORD HASHED,MUST_CHANGE,FROM WINDOWS,FROM CERTIFICATE,FROM ASYMMETRIC KEY,ENABLE,DISABLE,ADD CREDENTIAL,DROP CREDENTIAL,NO CREDENTIAL,UNLOCK,NAME,OLD_PASSWORD
 supported-1.0.0=PASSWORD,DEFAULT_DATABASE,DEFAULT_LANGUAGE,ENABLE,DISABLE
+supported-3.1.0=FROM WINDOWS
 report_group=Users
 
 [User options]
@@ -1404,5 +1422,5 @@ rule=execute_body
 default_classification=ReviewManually
 
 #-----------------------------------------------------------------------------------
-#file checksum=f0bb2843
+#file checksum=1ad4d7ff
 #--- end ---------------------------------------------------------------------------
