--- a/BabelfishCompassUser.Optimistic.cfg
+++ b/BabelfishCompassUser.Optimistic.cfg
@@ -1,6 +1,10 @@
 #
 # BabelfishCompassUser.Optimistic.cfg 
 #
+# Version
+# -------
+# Distributed with Compass v.2023-06
+#
 # What is this file?
 # ------------------
 # This file is a predefined version of the generic user-defined .cfg file
@@ -66,7 +70,6 @@
 # BabelfishCompassUser.Optimistic.cfg not being made available for use. 
 #
 #------------------------------------------------------------------------------
-#
 
 [@@variable]
 
@@ -120,6 +123,7 @@
 
 
 [Built-in functions]
+default_classification-Ignored=FILEGROUPPROPERTY,FILEGROUP_ID,FILEGROUP_NAME,FILEPROPERTY,FILEPROPERTYEX,FILE_ID,FILE_IDEX,FILE_NAME
 
 
 [HASHBYTES]
@@ -186,7 +190,7 @@
 
 
 [ALTER TABLE]
-
+default_classification-Ignored=SET LOCK_ESCALATION
 
 [ALTER INDEX]
 
@@ -207,7 +211,7 @@
 
 
 [Partitioning]
-
+default_classification=Ignored
 
 [FOR REPLICATION]
 
@@ -281,8 +285,10 @@
 [ALTER PROCEDURE]
 default_classification=Ignored
 
+
 [ALTER FUNCTION]
 default_classification=Ignored
+
 
 [ALTER TRIGGER]
 
@@ -354,7 +360,7 @@ default_classification=Ignored
 
 
 [CREATE DATABASE options]
-default_classification-Ignored=CATALOG_COLLATION DATABASE_DEFAULT
+default_classification-Ignored=CATALOG_COLLATION DATABASE_DEFAULT,CONTAINMENT=PARTIAL
 
 
 [ALTER DATABASE]
@@ -458,6 +464,7 @@ default_classification=Ignored
 [DBCC statements]
 default_classification=Ignored
 
+
 [Traceflags]
 
 
@@ -473,28 +480,36 @@ default_classification=Ignored
 [Case-sensitive collation]
 default_classification=Ignored
 
+
 [Catalogs]
+default_classification-Ignored=sysfiles,sysfilegroups,sysaltfiles
 
 
 [INFORMATION_SCHEMA]
 
 
 [System Stored Procedures]
-default_classification-Ignored=sp_addextendedproperty
+default_classification-Ignored=sp_db_vardecimal_storage_format,sp_addextendedproperty,sp_refreshview,sp_helpfile,xp_fixeddrives,sp_msreplraiserror,sp_trace_create,sp_trace_setevent,sp_trace_setfilter,sp_trace_setstatus
+
 
 [System Functions]
+default_classification-Ignored=fn_cdc_check_parameters,dm_db_index_operational_stats,dm_db_index_physical_stats,dm_db_log_stats,dm_db_stats_properties,dm_exec_plan_attributes,dm_exec_query_plan,dm_exec_query_statistics_xml,dm_exec_sql_text,dm_exec_text_query_plan,dm_io_virtual_file_stats,dm_os_volume_stats,dm_sql_referenced_entities,dm_sql_referencing_entities,dm_os_enumerate_filesystem,dm_os_file_exists,dm_io_virtual_file_stats,fn_virtualfilestats,fn_xe_file_target_read_file
 
 
 [GRANT]
+default_classification=Ignored
 
 
 [REVOKE]
+default_classification=Ignored
 
 
 [DENY]
+default_classification=Ignored
 
 
 [ALTER AUTHORIZATION]
+default_classification=Ignored
 
 
 [EXECUTE AS]
@@ -656,6 +671,10 @@ default_classification-Ignored=sp_addextendedproperty
 [SET SHOWPLAN_XML]
 
 
+[SET FORCEPLAN]
+default_classification=Ignored
+
+
 [SET OFFSETS]
 
 
@@ -663,9 +682,11 @@ default_classification-Ignored=sp_addextendedproperty
 
 
 [SET DATEFORMAT]
+default_classification-Ignored=mdy
 
 
 [SET DEADLOCK_PRIORITY]
+default_classification=Ignored
 
 
 [SET LOCK_TIMEOUT]
@@ -705,6 +726,7 @@ default_classification=Ignored
 
 [ALTER SERVER ROLE]
 default_classification=Ignored
+
 
 [Server role options]
 
@@ -761,3 +783,14 @@ default_classification=Ignored
 
 
 [Dynamically created cursor]
+
+
+[Comparison operator]
+
+
+[SET ANSI_DEFAULTS]
+
+
+[sp_serveroption]
+
+# end
