--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -15,11 +15,11 @@
 # this must always be the first section:
 [Babelfish for T-SQL]
 # only Babelfish version numbers listed here can be referenced the rules below:
-valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 3.1.0
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 3.1.0, 3.2.0
 # x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported)
 # 1.5.x, 1.4.x, 1.3.x are based on a newer PG release than 1.2.x (but contain no new T-SQL features)
 file_format=2                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Mar-2023                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Jun-2023                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy                                                                                                                                               
 
 # Basic principle: 
@@ -217,6 +217,7 @@ default_classification=ReviewSemantics
 rule=aggregate_windowed_function,ranking_windowed_function,analytic_windowed_function
 list=SUM,AVG,MAX,MIN,COUNT,COUNT_BIG,APPROX_COUNT_DISTINCT,CHECKSUM_AGG,CUME_DIST,DENSE_RANK,DENSE_RANK,DISTINCT,FIRST_VALUE,GROUPING,GROUPING_ID,LAG,LAST_VALUE,LEAD,NTILE,PERCENTILE_CONT,PERCENTILE_DISC,PERCENT_RANK,RANK,ROW_NUMBER,STDEV,STDEVP,STRING_AGG,VAR,VARP,APPROX_PERCENTILE_CONT,APPROX_PERCENTILE_DISC
 supported-1.0.0=SUM,AVG,MAX,MIN,COUNT,COUNT_BIG,CUME_DIST,DENSE_RANK,DENSE_RANK,DISTINCT,FIRST_VALUE,GROUPING,LAG,LAST_VALUE,LEAD,NTILE,PERCENTILE_CONT,PERCENTILE_DISC,PERCENT_RANK,RANK,ROW_NUMBER,STRING_AGG
+supported-3.2.0=STDEV,STDEVP,VAR,VARP
 
 [Built-in functions]
 rule=function_call
@@ -229,6 +230,7 @@ supported-2.2.0=HOST_NAME,SYSTEM_USER,SID_BINARY
 supported-2.3.0=DATETIMEOFFSETFROMPARTS,TRY_CONVERT,FORMAT,JSON_MODIFY
 supported-2.4.0=ATN2,APP_NAME,STR,SESSION_CONTEXT,DATEDIFF_BIG,OBJECT_DEFINITION,OBJECT_SCHEMA_NAME
 supported-3.1.0=OPENQUERY
+supported-3.2.0=CONTEXT_INFO,ROWCOUNT_BIG,DATABASE_PRINCIPAL_ID,TIMEFROMPARTS,DATETIME2FROMPARTS
 default_classification-ReviewSemantics=NEWSEQUENTIALID
 report_group-Filestream=FILETABLEROOTPATH,GETFILENAMESPACEPATH,GETPATHLOCATOR,PATHNAME
 report_group-Fulltext Search=CONTAINS,CONTAINSTABLE,FREETEXT,FREETEXTTABLE,SEMANTICKEYPHRASETABLE,SEMANTICSIMILARITYDETAILSTABLE,SEMANTICSIMILARITYTABLE,FULLTEXTCATALOGPROPERTY,FULLTEXTSERVICEPROPERTY
@@ -237,8 +239,8 @@ report_group-XML=OPENXML
 report_group-Triggers=EVENTDATA,COLUMNS_UPDATED,UPDATE
 report_group-Transactions=CURRENT_TRANSACTION_ID
 report_group-JSON=OPENJSON,ISJSON,JSON,JSON_MODIFY,JSON_QUERY,JSON_VALUE,JSON_OBJECT,JSON_ARRAY,JSON_PATH_EXISTS
-complexity_score-LOW=STR,ATAN2,DATABASE_PRINCIPAL_ID,APP_NAME,HOST_ID
-complexity_score-HIGH=ENCRYPTBYASYMKEY,ENCRYPTBYCERT,ENCRYPTBYKEY,ENCRYPTBYPASSPHRASE,PWDCOMPARE,PWDENCRYPT,DECRYPTBYASYMKEY,DECRYPTBYCERT,DECRYPTBYKEY,DECRYPTBYKEYAUTOASYMKEY,DECRYPTBYKEYAUTOCERT,DECRYPTBYPASSPHRASE,DECRYPTBYKEYAUTOCERT,CERT_ID,KEY_GUID,KEY_ID,KEY_NAME,ASYMKEYPROPERTY,CERTPROPERTY,CRYPT_GEN_RANDOM,SIGNBYASYMKEY,SIGNBYCERT,SYMKEYPROPERTY,VERIFYSIGNEDBYCERT,VERIFYSIGNEDBYASYMKEY,CONTAINS,CONTAINSTABLE,FREETEXT,FREETEXTTABLE,SEMANTICKEYPHRASETABLE,SEMANTICSIMILARITYDETAILSTABLE,SEMANTICSIMILARITYTABLE,FULLTEXTCATALOGPROPERTY,FULLTEXTSERVICEPROPERTY,FILETABLEROOTPATH,GETFILENAMESPACEPATH,GETPATHLOCATOR,PATHNAME,OPENQUERY
+complexity_score-LOW=STR,ATAN2,DATABASE_PRINCIPAL_ID,APP_NAME,HOST_ID,SOUNDEX,DIFFERENCE
+complexity_score-HIGH=ENCRYPTBYASYMKEY,ENCRYPTBYCERT,ENCRYPTBYKEY,ENCRYPTBYPASSPHRASE,PWDCOMPARE,PWDENCRYPT,DECRYPTBYASYMKEY,DECRYPTBYCERT,DECRYPTBYKEY,DECRYPTBYKEYAUTOASYMKEY,DECRYPTBYKEYAUTOCERT,DECRYPTBYPASSPHRASE,DECRYPTBYKEYAUTOCERT,CERT_ID,KEY_GUID,KEY_ID,KEY_NAME,ASYMKEYPROPERTY,CERTPROPERTY,CRYPT_GEN_RANDOM,SIGNBYASYMKEY,SIGNBYCERT,SYMKEYPROPERTY,VERIFYSIGNEDBYCERT,VERIFYSIGNEDBYASYMKEY,CONTAINS,CONTAINSTABLE,FREETEXT,FREETEXTTABLE,SEMANTICKEYPHRASETABLE,SEMANTICSIMILARITYDETAILSTABLE,SEMANTICSIMILARITYTABLE,FULLTEXTCATALOGPROPERTY,FULLTEXTSERVICEPROPERTY,FILETABLEROOTPATH,GETFILENAMESPACEPATH,GETPATHLOCATOR,PATHNAME,OPENQUERY,CHANGETABLE,CHANGE_TRACKING_MIN_VALID_VERSION,CHANGE_TRACKING_CURRENT_VERSION,CHANGE_TRACKING_IS_COLUMN_IN_MASK,CHANGE_TRACKING_CONTEXT
 
 [HASHBYTES]
 rule=function_call
@@ -334,12 +336,14 @@ report_group=Built-in functions
 
 [Numeric representation of datetime]
 rule=function_call
-list=DATEADD,DATEDIFF,DATEPART,DATENAME,CAST,TRY_CAST,CONVERT,TRY_CONVERT,PARSE,TRY_PARSE
+list=DATEADD,DATEDIFF,DATEPART,DATENAME,CAST,TRY_CAST,CONVERT,TRY_CONVERT
 supported-2.2.0=CAST
+supported-3.2.0=TRY_CAST,CONVERT,TRY_CONVERT,DATEADD,DATEDIFF,DATEPART,DATENAME
 
 [Numeric assignment to datetime variable/parameter/column]
 rule=set_statement,select_list_elem,declare_local,procedure_param,column_definition
 report_group=Numeric representation of datetime
+supported-3.2.0=*
 
 #--- tables/columns -----
 
@@ -380,6 +384,7 @@ default_classification-ReviewSemantics=CHECK CONSTRAINT,NOCHECK CONSTRAINT
 report_group=DDL
 report_group-Triggers=ENABLE TRIGGER,DISABLE TRIGGER
 complexity_score-LOW=DROP MULTIPLE ITEMS,DROP MULTIPLE COLUMNS,DROP MULTIPLE CONSTRAINTS,ADD MULTIPLE COLUMNS/CONSTRAINTS
+complexity_score-HIGH=SET FILESTREAM_ON,SET SYSTEM_VERSIONING,SET LOCK_ESCALATION,SET FILETABLE,ENABLE CHANGE_TRACKING,DISABLE CHANGE_TRACKING,ADD PERIOD FOR SYSTEM TIME,DROP PERIOD FOR SYSTEM_TIME
 
 [ALTER INDEX]
 rule=alter_index
@@ -394,7 +399,7 @@ complexity_score=HIGH
 
 [Index options]
 rule=index_option
-list=FILLFACTOR,ALLOW_PAGE_LOCKS,ALLOW_ROW_LOCKS,PAD_INDEX,STATISTICS_NORECOMPUTE,OPTIMIZE_FOR_SEQUENTIAL_KEY,SORT_IN_TEMPDB,DROP_EXISTING,ONLINE,COMPRESSION_DELAY,MAXDOP,DATA_COMPRESSION,BUCKET_COUNT,SORTED_DATA
+list=FILLFACTOR,ALLOW_PAGE_LOCKS,ALLOW_ROW_LOCKS,PAD_INDEX,STATISTICS_NORECOMPUTE,OPTIMIZE_FOR_SEQUENTIAL_KEY,SORT_IN_TEMPDB,DROP_EXISTING,ONLINE,COMPRESSION_DELAY,MAXDOP,DATA_COMPRESSION,BUCKET_COUNT,SORTED_DATA,RESUMABLE,MAX_DURATION,XML_COMPRESSION
 default_classification=Ignored
 report_group=DDL
 
@@ -800,6 +805,8 @@ report_group=Identifiers
 
 [Remote object reference]
 rule=full_object_name
+list=SELECT,INSERT,UPDATE,DELETE,MERGE,INSERT(target),UPDATE(target),DELETE(target),MERGE(target),EXECUTE procedure
+supported-3.2.0=SELECT,UPDATE,DELETE
 report_group=Identifiers
 complexity_score=HIGH
 
@@ -886,9 +893,10 @@ report_group=Cursors
 
 [DBA statements]
 rule=backup_statement,restore_statement,kill_statement,reconfigure_statement,shutdown_statement
-list=BACKUP,RESTORE,KILL,RECONFIGURE,SHUTDOWN,BACKUP SYMMETRIC KEY,BACKUP MASTER KEY,BACKUP SERVICE MASTER KEY,BACKUP CERTIFICATE,RESTORE SYMMETRIC KEY,RESTORE MASTER KEY,RESTORE SERVICE MASTER KEY,RESTORE CERTIFICATE
+list=BACKUP,RESTORE,KILL,RECONFIGURE,SHUTDOWN,BACKUP SYMMETRIC KEY,BACKUP MASTER KEY,BACKUP SERVICE MASTER KEY,BACKUP CERTIFICATE,RESTORE SYMMETRIC KEY,RESTORE MASTER KEY,RESTORE SERVICE MASTER KEY
 report_group=default
-report_group-Encryption=BACKUP SYMMETRIC KEY,BACKUP MASTER KEY,BACKUP SERVICE MASTER KEY,BACKUP CERTIFICATE,RESTORE SYMMETRIC KEY,RESTORE MASTER KEY,RESTORE SERVICE MASTER KEY,RESTORE CERTIFICATE
+report_group-Encryption=BACKUP SYMMETRIC KEY,BACKUP MASTER KEY,BACKUP SERVICE MASTER KEY,RESTORE SYMMETRIC KEY,RESTORE MASTER KEY,RESTORE SERVICE MASTER KEY
+report_group-Security=BACKUP CERTIFICATE
 complexity_score=HIGH
 complexity_score-LOW=RECONFIGURE
 complexity_score-MEDIUM=KILL,SHUTDOWN,BACKUP,RESTORE
@@ -923,6 +931,7 @@ rule=collation
 supported-1.0.0=ARABIC_CS_AS,ARABIC_CI_AI,ARABIC_CI_AS,CHINESE_PRC_CS_AS,CHINESE_PRC_CI_AI,CHINESE_PRC_CI_AS,CYRILLIC_GENERAL_CS_AS,CYRILLIC_GENERAL_CI_AI,CYRILLIC_GENERAL_CI_AS,FINNISH_SWEDISH_CS_AS,FINNISH_SWEDISH_CI_AS,FINNISH_SWEDISH_CI_AI,FRENCH_CS_AS,FRENCH_CI_AS,FRENCH_CI_AI,KOREAN_WANSUNG_CS_AS,KOREAN_WANSUNG_CI_AS,KOREAN_WANSUNG_CI_AI,LATIN1_GENERAL_BIN2,LATIN1_GENERAL_90_BIN2,LATIN1_GENERAL_100_BIN2,LATIN1_GENERAL_140_BIN2,LATIN1_GENERAL_CI_AI,LATIN1_GENERAL_CI_AS,LATIN1_GENERAL_CS_AI,LATIN1_GENERAL_CS_AS,MODERN_SPANISH_CS_AS,MODERN_SPANISH_CI_AS,MODERN_SPANISH_CI_AI,POLISH_CS_AS,POLISH_CI_AS,POLISH_CI_AI,SQL_LATIN1_GENERAL_CP1250_CI_AS,SQL_LATIN1_GENERAL_CP1250_CS_AS,SQL_LATIN1_GENERAL_CP1251_CI_AS,SQL_LATIN1_GENERAL_CP1251_CS_AS,SQL_LATIN1_GENERAL_CP1_CI_AI,SQL_LATIN1_GENERAL_CP1_CI_AS,SQL_LATIN1_GENERAL_CP1_CI_AI,SQL_LATIN1_GENERAL_CP1_CS_AS,SQL_LATIN1_GENERAL_PREF_CP1_CS_AS,SQL_LATIN1_GENERAL_CP1253_CI_AS,SQL_LATIN1_GENERAL_CP1253_CS_AS,SQL_LATIN1_GENERAL_CP1254_CI_AS,SQL_LATIN1_GENERAL_CP1254_CS_AS,SQL_LATIN1_GENERAL_CP1255_CI_AS,SQL_LATIN1_GENERAL_CP1255_CS_AS,SQL_LATIN1_GENERAL_CP1256_CI_AS,SQL_LATIN1_GENERAL_CP1256_CS_AS,SQL_LATIN1_GENERAL_CP1257_CI_AS,SQL_LATIN1_GENERAL_CP1257_CS_AS,SQL_LATIN1_GENERAL_CP1258_CI_AS,SQL_LATIN1_GENERAL_CP1258_CS_AS,THAI_CS_AS,THAI_CI_AS,THAI_CI_AI,TRADITIONAL_SPANISH_CS_AS,TRADITIONAL_SPANISH_CI_AS,TRADITIONAL_SPANISH_CI_AI,TURKISH_CS_AS,TURKISH_CI_AS,TURKISH_CI_AI,UKRAINIAN_CS_AS,UKRAINIAN_CI_AS,UKRAINIAN_CI_AI,VIETNAMESE_CS_AS,VIETNAMESE_CI_AS,VIETNAMESE_CI_AI
 supported-2.1.0=JAPANESE_CS_AS,JAPANESE_CI_AI,JAPANESE_CI_AS
 supported-2.2.0=DATABASE_DEFAULT
+complexity_score=LOW
 
 [Case-sensitive collation]
 rule=collation
@@ -940,6 +949,7 @@ supported-2.2.0=numbered_procedures,triggers,spatial_index_tessellations,plan_gu
 supported-2.3.0=all_parameters
 supported-2.4.0=partitions,systypes
 supported-3.1.0=linked_logins,servers
+supported-3.2.0=sysusers,syslogins
 
 [INFORMATION_SCHEMA]
 rule=full_object_name
@@ -962,11 +972,17 @@ supported-2.2.0=sp_helpsrvrolemember
 supported-2.3.0=sp_helpdbfixedrole,sp_addrole,sp_droprole,sp_addrolemember,sp_droprolemember
 supported-2.4.0=sp_set_session_context,sp_rename 
 supported-3.1.0=sp_linkedservers,sp_addlinkedserver,sp_dropserver,sp_addlinkedsrvlogin,sp_helplinkedsrvlogin,sp_droplinkedsrvlogin
+supported-3.2.0=sp_serveroption
 default_classification-ReviewManually=sp_db_vardecimal_storage_format,sp_fulltext_database
 report_group-XML=sp_xml_preparedocument,sp_xml_removedocument,sp_xml_schema_rowset,sp_xml_schema_rowset2
 report_group-Distributed Transactions(XA)=sp_sqljdbc_xa_install,sp_sqljdbc_xa_uninstall,sp_sqljdbc_xa_internal_remove,sp_xa_commit,sp_xa_end,sp_xa_forget,sp_xa_forget_ex,sp_xa_init,sp_xa_init_ex,sp_xa_prepare,sp_xa_prepare_ex,sp_xa_recover,sp_xa_rollback,sp_xa_rollback_ex,sp_xa_start,xp_sqljdbc_xa_commit,xp_sqljdbc_xa_end,xp_sqljdbc_xa_forget,xp_sqljdbc_xa_forget_ex,xp_sqljdbc_xa_init,xp_sqljdbc_xa_init_ex,xp_sqljdbc_xa_prepare,xp_sqljdbc_xa_prepare_ex,xp_sqljdbc_xa_recover,xp_sqljdbc_xa_rollback,xp_sqljdbc_xa_rollback_ex,xp_sqljdbc_xa_start
 complexity_score=HIGH
 complexity_score-LOW=sp_addextendedproperty
+
+[sp_serveroption]
+rule=execute_body
+supported-3.2.0=arg2=QUERY TIMEOUT
+complexity_score=HIGH
 
 [System Functions]
 rule=function_call
@@ -1040,6 +1056,7 @@ report_group=DML
 
 [SELECT TOP in Table-Valued Function]
 rule=top_clause  
+supported-3.2.0=*
 report_group=DML
 
 [Lateral join]
@@ -1054,6 +1071,12 @@ rule=comparison_operator
 list=LEFT OJ,RIGHT OJ
 report_group=Operators
 complexity_score=HIGH
+
+[Comparison operator]
+rule=comparison_operator
+list=!>,!<
+report_group=Operators
+complexity_score=LOW
 
 [Compound operator containing whitespace]
 rule=comparison_operator
@@ -1079,6 +1102,8 @@ rule=insert_statement
 list=VALUES,SELECT,EXECUTE PROCEDURE,EXECUTE SP_EXECUTESQL,EXECUTE(STRING),EXECUTE(EXPRESSION),DEFAULT VALUES,TOP,CTE,OUTPUT,OUTPUT OUTPUT,OPENQUERY,OPENROWSET,TABLE FUNCTION,TARGET CTE
 supported-1.0.0=VALUES,SELECT,EXECUTE PROCEDURE,CTE,OUTPUT
 supported-2.1.0=EXECUTE(STRING)
+ReviewSemantics-3.2.0=TOP
+default_classification-ReviewSemantics=TOP
 report_group=DML
 complexity_score-HIGH=OPENQUERY,OPENROWSET,TABLE FUNCTION
 
@@ -1090,11 +1115,14 @@ report_group=DML
 # can only be used with client-side bulk API
 rule=insert_bulk_statement
 report_group=DML
+default_classification=ReviewSemantics
 
 [UPDATE]
 rule=update_statement
 list=TOP,CTE,OUTPUT,OUTPUT OUTPUT,OPENQUERY,OPENROWSET,OPENDATASOURCE,WHERE CURRENT OF,TABLE FUNCTION,TARGET CTE
-supported-1.0.0=TOP,CTE,OUTPUT
+supported-1.0.0=CTE,OUTPUT
+ReviewSemantics-3.2.0=TOP
+default_classification-ReviewSemantics=TOP
 report_group-Cursors=WHERE CURRENT OF
 report_group=DML
 complexity_score-HIGH=OPENQUERY,OPENROWSET,OPENDATASOURCE,WHERE CURRENT OF,TABLE FUNCTION
@@ -1102,7 +1130,9 @@ complexity_score-HIGH=OPENQUERY,OPENROWSET,OPENDATASOURCE,WHERE CURRENT OF,TABLE
 [DELETE]
 rule=update_statement
 list=TOP,CTE,OUTPUT,OUTPUT OUTPUT,OPENQUERY,OPENROWSET,OPENDATASOURCE,WHERE CURRENT OF,TABLE FUNCTION,TARGET CTE
-supported-1.0.0=TOP,CTE,OUTPUT
+supported-1.0.0=CTE,OUTPUT
+ReviewSemantics-3.2.0=TOP
+default_classification-ReviewSemantics=TOP
 report_group-Cursors=WHERE CURRENT OF
 report_group=DML
 complexity_score-HIGH=OPENQUERY,OPENROWSET,OPENDATASOURCE,WHERE CURRENT OF,TABLE FUNCTION
@@ -1167,12 +1197,14 @@ supported-1.0.0=*
 rule=set_special
 list=0,NONZERO,VARIABLE
 supported-1.0.0=0    
+supported-3.2.0=NONZERO,VARIABLE
 
 [SET TRANSACTION ISOLATION LEVEL]
 rule=set_special
 report_group=Transactions
 supported-1.0.0=READ COMMITTED,READ UNCOMMITTED,SNAPSHOT
 complexity_score=HIGH
+default_classification=ReviewSemantics
 
 [SET IMPLICIT_TRANSACTIONS]
 rule=set_special
@@ -1198,15 +1230,22 @@ rule=set_special
 supported-1.0.0=OFF
 complexity_score=LOW
 
+[SET ANSI_DEFAULTS]
+rule=set_special
+supported-1.0.0=ON
+complexity_score=LOW
+
 [SET ANSI_PADDING]
 rule=set_special
 supported-1.0.0=ON
 complexity_score=LOW
+default_classification-ReviewSemantics=OFF
 
 [SET ANSI_WARNINGS]
 rule=set_special
 supported-1.0.0=ON
 complexity_score=LOW
+default_classification-ReviewSemantics=OFF
 
 [SET ARITHABORT]
 rule=set_special
@@ -1250,12 +1289,14 @@ complexity_score=LOW
 
 [SET CONTEXT_INFO]
 rule=set_special
+supported-3.2.0=*
 
 [SET STATISTICS]
 rule=set_special
 supported-2.2.0=*
 
 [SET BABELFISH_STATISTICS]
+# option: PROFILE
 rule=set_special
 supported-2.1.0=*
 
@@ -1275,6 +1316,9 @@ default_classification=Ignored
 [SET SHOWPLAN_XML]
 rule=set_special
 default_classification=Ignored
+
+[SET FORCEPLAN]
+rule=set_special
 
 [SET OFFSETS]
 rule=set_special
@@ -1397,6 +1441,7 @@ report_group-Service Broker=ROUTE,QUEUE,SERVICE,MESSAGE TYPE,REMOTE SERVICE BIND
 report_group-Encryption=ASYMMETRIC KEY,COLUMN ENCRYPTION KEY,COLUMN MASTER KEY,MASTER KEY,SERVICE MASTER KEY,SYMMETRIC KEY,CRYPTOGRAPHIC PROVIDER
 report_group=default
 complexity_score=HIGH
+complexity_score-MEDIUM=RULE,DEFAULT,SYNONYM
 
 [ADD SIGNATURE]
 rule=add_signature_statement
@@ -1414,6 +1459,7 @@ complexity_score=HIGH
 rule=update_statement,delete_statement
 list=UPDATE TABVAR VIA CORRELATION IN FUNCTION,DELETE TABVAR VIA CORRELATION IN FUNCTION,UPDATE CORRELATION SET UNQUALIFIED COLUMN,UPDATE QUALIFIED SET COLUMN
 supported-2.4.0=UPDATE CORRELATION SET UNQUALIFIED COLUMN,UPDATE QUALIFIED SET COLUMN
+supported-3.2.0=UPDATE TABVAR VIA CORRELATION IN FUNCTION,DELETE TABVAR VIA CORRELATION IN FUNCTION
 report_group=Syntax Issues
 
 [Dynamic SQL]
@@ -1422,5 +1468,5 @@ rule=execute_body
 default_classification=ReviewManually
 
 #-----------------------------------------------------------------------------------
-#file checksum=1ad4d7ff
+#file checksum=48ebcbbe
 #--- end ---------------------------------------------------------------------------
