small fixes and enhancements

--- a/BabelfishCompassUser.Optimistic.cfg
+++ b/BabelfishCompassUser.Optimistic.cfg
@@ -171,6 +171,9 @@ default_classification-Ignored=FILEGROUPPROPERTY,FILEGROUP_ID,FILEGROUP_NAME,FIL
 [Numeric assignment to datetime variable/parameter/column]
 
 
+[Datetime converted to numeric]
+
+
 [Column attribute]
 
 
@@ -332,6 +335,9 @@ default_classification=Ignored
 [Function options]
 
 
+[Missing AS keyword in scalar CREATE FUNCTION]
+
+
 [EXECUTE SQL function]
 
 
@@ -472,6 +478,9 @@ default_classification=Ignored
 
 
 [::function call (old syntax)]
+
+
+[IF-ELSE-block containing only DECLARE]
 
 
 [Collations]
@@ -792,5 +801,6 @@ default_classification=Ignored
 
 
 [sp_serveroption]
+
 
 # end
