--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -345,6 +345,12 @@ rule=set_statement,select_list_elem,declare_local,procedure_param,column_definit
 report_group=Numeric representation of datetime
 supported-3.2.0=*
 
+[Datetime converted to numeric]
+rule=function_call
+list=CAST,TRY_CAST,CONVERT,TRY_CONVERT
+report_group=Numeric representation of datetime
+
+
 #--- tables/columns -----
 
 [Column attribute]
@@ -651,6 +657,12 @@ default_classification-ReviewPerformance=INLINE
 report_group=Functions
 complexity_score-HIGH=EXTERNAL,CLR,ATOMIC NATIVELY COMPILED,ENCRYPTION
 
+[Missing AS keyword in scalar CREATE FUNCTION]
+rule=create_or_alter_function
+list=USER-DEFINED DATATYPE,BIT,DATETIME,DATETIME2,SMALLDATETIME,DATETIMEOFFSET,TIMESTAMP,ROWVERSION,UNIQUEIDENTIFIER,SQL_VARIANT,TINYINT,CHAR,VARCHAR,NCHAR,NVARCHAR,BINARY,VARBINARY
+report_group=Functions
+complexity_score=LOW
+
 [EXECUTE SQL function]
 rule=execute_body
 report_group=Functions
@@ -921,6 +933,12 @@ rule=table_source_item
 supported-2.2.0=*
 report_group=Functions
 complexity_score=LOW
+
+[IF-ELSE-block containing only DECLARE]
+rule=if_statement
+report_group=Control flow
+complexity_score=LOW
+default_classification=ReviewSemantics
 
 #--- System procedures/functions/catalogs -----
 
@@ -1468,5 +1486,5 @@ rule=execute_body
 default_classification=ReviewManually
 
 #-----------------------------------------------------------------------------------
-#file checksum=48ebcbbe
+#file checksum=88b962cf
 #--- end ---------------------------------------------------------------------------
