support for FETCH options since v.1.2

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -15,9 +15,8 @@
 # this must always be the first section:
 [Babelfish for T-SQL]
 # only Babelfish version numbers listed here can be referenced the rules below:
-valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 3.1.0, 3.2.0
-# x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported)
-# 1.5.x, 1.4.x, 1.3.x are based on a newer PG release than 1.2.x (but contain no new T-SQL features)
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0
+# x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported), and are typically based on a newer PG release
 file_format=2                           # version number for format of this .cfg file. This is not expected to change much 
 file_timestamp=Jun-2023                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy                                                                                                                                               
@@ -897,6 +896,7 @@ report_group=Cursors
 rule=fetch_cursor
 list=NEXT,PRIOR,FIRST,LAST,ABSOLUTE,RELATIVE
 supported-1.0.0=NEXT
+supported-1.2.0=PRIOR,FIRST,LAST,ABSOLUTE,RELATIVE
 report_group=Cursors
 
 [Dynamically created cursor]
@@ -1486,5 +1486,5 @@ rule=execute_body
 default_classification=ReviewManually
 
 #-----------------------------------------------------------------------------------
-#file checksum=88b962cf
+#file checksum=e80208e4
 #--- end ---------------------------------------------------------------------------
