--- a/BabelfishCompassUser.Optimistic.cfg
+++ b/BabelfishCompassUser.Optimistic.cfg
@@ -410,6 +410,9 @@ default_classification=Ignored
 [ODBC Outer Join]
 
 
+[ODBC {ESCAPE} clause]
+
+
 [Query hint]
 
 
@@ -555,6 +558,9 @@ default_classification=Ignored
 
 
 [Compound operator containing whitespace]
+
+
+[PG operator requiring whitespace]
 
 
 [GROUP BY ROLLUP/CUBE (old syntax)]
@@ -801,6 +807,12 @@ default_classification=Ignored
 
 
 [sp_serveroption]
+
+
+[sqlcmd command]
+
+
+[sqlcmd variable]
 
 
 # end
