--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -765,7 +765,7 @@ report_group=default
 
 [LIKE '[...]']
 rule=predicate 
-report_group=default
+report_group=Operators
 
 [SELECT TOP without ORDER BY]  
 rule=select_statement
@@ -787,6 +787,11 @@ report_group=Built-in functions
 [ODBC Outer Join]
 rule=odbc_outer_join
 report_group=DML
+
+[ODBC {ESCAPE} clause]
+rule=like_escape_clause
+report_group=Operators
+complexity_score=LOW
 
 [Query hint]
 rule=option
@@ -1102,6 +1107,12 @@ list=<=,>=,<>,!=,!>,!<,*=,=*
 report_group=Operators
 complexity_score=LOW
 
+[PG operator requiring whitespace]
+rule=comparison_operator
+list==@@,>@@,<@@
+report_group=Operators
+complexity_score=LOW
+
 [DISTINCT FROM]
 rule=distinct_from_operator
 report_group=Operators
@@ -1117,7 +1128,7 @@ report_group=DML
 
 [INSERT]
 rule=insert_statement
-list=VALUES,SELECT,EXECUTE PROCEDURE,EXECUTE SP_EXECUTESQL,EXECUTE(STRING),EXECUTE(EXPRESSION),DEFAULT VALUES,TOP,CTE,OUTPUT,OUTPUT OUTPUT,OPENQUERY,OPENROWSET,TABLE FUNCTION,TARGET CTE
+list=VALUES,SELECT,EXECUTE PROCEDURE,EXECUTE SP_EXECUTESQL,EXECUTE(STRING),EXECUTE(EXPRESSION),DEFAULT VALUES,TOP,TOP SUBQUERY,CTE,OUTPUT,OUTPUT OUTPUT,OPENQUERY,OPENROWSET,TABLE FUNCTION,TARGET CTE
 supported-1.0.0=VALUES,SELECT,EXECUTE PROCEDURE,CTE,OUTPUT
 supported-2.1.0=EXECUTE(STRING)
 ReviewSemantics-3.2.0=TOP
@@ -1137,7 +1148,7 @@ default_classification=ReviewSemantics
 
 [UPDATE]
 rule=update_statement
-list=TOP,CTE,OUTPUT,OUTPUT OUTPUT,OPENQUERY,OPENROWSET,OPENDATASOURCE,WHERE CURRENT OF,TABLE FUNCTION,TARGET CTE
+list=TOP,TOP SUBQUERY,CTE,OUTPUT,OUTPUT OUTPUT,OPENQUERY,OPENROWSET,OPENDATASOURCE,WHERE CURRENT OF,TABLE FUNCTION,TARGET CTE
 supported-1.0.0=CTE,OUTPUT
 ReviewSemantics-3.2.0=TOP
 default_classification-ReviewSemantics=TOP
@@ -1147,7 +1158,7 @@ complexity_score-HIGH=OPENQUERY,OPENROWSET,OPENDATASOURCE,WHERE CURRENT OF,TABLE
 
 [DELETE]
 rule=update_statement
-list=TOP,CTE,OUTPUT,OUTPUT OUTPUT,OPENQUERY,OPENROWSET,OPENDATASOURCE,WHERE CURRENT OF,TABLE FUNCTION,TARGET CTE
+list=TOP,TOP SUBQUERY,CTE,OUTPUT,OUTPUT OUTPUT,OPENQUERY,OPENROWSET,OPENDATASOURCE,WHERE CURRENT OF,TABLE FUNCTION,TARGET CTE
 supported-1.0.0=CTE,OUTPUT
 ReviewSemantics-3.2.0=TOP
 default_classification-ReviewSemantics=TOP
@@ -1157,7 +1168,7 @@ complexity_score-HIGH=OPENQUERY,OPENROWSET,OPENDATASOURCE,WHERE CURRENT OF,TABLE
 
 [MERGE]
 rule=merge_statement
-list=MERGE,TOP,CTE,OUTPUT,OUTPUT OUTPUT,TABLE FUNCTION,TARGET CTE
+list=MERGE,TOP,TOP SUBQUERY,CTE,OUTPUT,OUTPUT OUTPUT,TABLE FUNCTION,TARGET CTE
 report_group=DML
 complexity_score-HIGH=TABLE FUNCTION
 
@@ -1485,6 +1496,17 @@ report_group=Syntax Issues
 rule=execute_body
 default_classification=ReviewManually
 
+[sqlcmd command]
+# client tool commands, not SQL
+rule=sqlcmd_command
+list=SETVAR
+default_classification=ReviewManually
+
+[sqlcmd variable]
+# client tool variable, not SQL
+rule=sqlcmd_variable
+default_classification=ReviewManually
+
 #-----------------------------------------------------------------------------------
-#file checksum=e80208e4
+#file checksum=c6e38e7c
 #--- end ---------------------------------------------------------------------------
